# matplotlib_journey

./: pyproject.toml
misc/: aantal_woningen_reclame.py  cartogram.py  mario_cart.py  wee_people_chart.py  wee_people_chart_gif.py  wee_people_gif.py
module 1/: 04.py  05_plottypes.py  module_01.py  module_01_project.py
module 2/: .gitignore  earths_required.py  lesson_1.py  lesson_2.py  lesson_3.py  lesson_4.py  lesson_5.py  lesson_6.py  lesson_7.py  lesson_8.py  lesson_8_other.py  own_graph_lesson_7.py  project.py  project2.py  project2_map.py
module 3/: food_contents.py  games.py  lesson_1.py  lesson_2.py  lesson_4.py  lesson_6.py  project.py  slacht.py
module 4/: fancy_utrecht_winkels bla.py  fancy_utrecht_winkels.py  lesson_1.py  lesson_2.py  project.py  wegennet.py
